Añadido efecto de animación en modal y soporte para todas las imágenes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <!-- ===== MODAL IMG ===== -->
     <div id="modal" class="modal" aria-hidden="true" role="dialog" aria-label="Imagen ampliada">
       <span class="modal-close" id="modal-close" aria-label="Cerrar">&times;</span>
+      <img class="modal-content" id="modal-img" alt="Imagen ampliada" />
     </div>
+
 
     <!-- ===== SOBRE MÍ ===== -->
     <section id="about" class="about container">
