fix: actualización de codigo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <li><a href="#home">Inicio</a></li>
         <li><a href="#about">Sobre mí</a></li>
         <li><a href="#skills">Habilidades</a></li>
-        <li><a href="#pasatiempos">Pasatiempos</a></li>
-        <li><a href="#juegos-favoritos">Juegos Favoritos</a></li>
+        <li><a href="#projects">Proyectos</a></li>
+        <li><a href="#experience">Experiencia</a></li>
+        <li><a href="#methodology">Metodología</a></li>
         <li><a href="#contact">Contacto</a></li>
       </ul>
     </nav>
@@ -31,8 +32,8 @@
     <!-- ===== HERO ===== -->
     <section id="home" class="hero container">
       <div class="hero-text">
-        <h1>Hola, soy <span>Christopher Joshua — Más conocido como CJ o Sigma</span></h1>
-        <p>Desarrollador web en formación — Construyo soluciones con corazón y dedicación.</p>
+        <h1>Desarrollador de Software | <span>Mobile & Web | IA aplicada</span></h1>
+        <p>Estudiante de Ingeniería de Software — Creando soluciones prácticas con código e IA.</p>
       </div>
       <div class="hero-image">
         <img src="img/yo_fotodeperfil.jpg" alt="Foto de CJ" class="avatar" id="profile-pic" style="cursor:pointer;" />
@@ -49,57 +50,127 @@
     <!-- ===== SOBRE MÍ ===== -->
     <section id="about" class="about container">
       <h2>Sobre mí</h2>
-      <p>Soy un desarrollador en formación que disfruta creando interfaces limpias y un backend sólido.</p>
+      <p>Soy desarrollador de software con nivel intermedio, enfocado en crear aplicaciones funcionales y soluciones prácticas.</p>
+      <br>
+      <p>Actualmente estudio Ingeniería de Software con enfoque en Inteligencia Artificial y realizo prácticas profesionales, donde refuerzo mis habilidades técnicas y trabajo en equipo.</p>
+      <br>
+      <p>Me caracterizo por un desarrollo iterativo y eficiente, utilizando herramientas modernas y asistentes de IA como apoyo, manteniendo siempre el control y entendimiento del código. Me enfoco en entregar productos reales, optimizados y escalables.</p>
     </section>
 
     <!-- ===== HABILIDADES ===== -->
     <!-- ===== HABILIDADES ===== -->
     <section id="skills" class="projects container">
-      <h2>Habilidades</h2>
+      <h2>Habilidades Técnicas</h2>
       <div class="grid">
         <article class="card">
-          <img src="img/html5.jpg" alt="HTML5" class="game-img" />
-          <p>HTML5 define la estructura, diseño y contenido de una página web.</p>
-          <h3>HTML5</h3>
-        </article>
-
-        <article class="card">
-          <img src="img/css3.jpg" alt="CSS3" class="game-img" />
-          <p>CSS3 permite definir la presentación visual de documentos HTML/XML.</p>
-          <h3>CSS3</h3>
-        </article>
-
-        <article class="card">
           <img src="img/javascript.jpg" alt="JavaScript" class="game-img" />
-          <p>JavaScript añade interactividad a las páginas web.</p>
-          <h3>JavaScript (ES6+)</h3>
+          <h3>JavaScript / TypeScript</h3>
+          <p>Desarrollo de lógica y aplicaciones interactivas.</p>
+        </article>
+
+        <article class="card">
+          <img src="img/react.png" alt="React" class="game-img" />
+          <h3>React / React Native</h3>
+          <p>Aplicaciones web y móviles multiplataforma.</p>
+        </article>
+
+         <article class="card">
+          <!-- Placeholder or generic icon if specific img missing -->
+          <div style="font-size: 3rem; text-align: center;">📱</div>
+          <h3>Expo Go</h3>
+          <p>Desarrollo y prototipado rápido de aplicaciones móviles.</p>
+        </article>
+
+        <article class="card">
+          <img src="img/html5.jpg" alt="HTML5" class="game-img" />
+          <h3>HTML & CSS</h3>
+          <p>Interfaces limpias y responsivas.</p>
+        </article>
+
+        <article class="card">
+           <div style="font-size: 3rem; text-align: center;">🔥</div>
+          <h3>Firebase</h3>
+          <p>Autenticación, base de datos y backend para apps.</p>
         </article>
 
         <article class="card">
           <img src="img/python.jpg" alt="Python" class="game-img" />
           <h3>Python</h3>
-        </article>
-
-        <article class="card">
-          <img src="img/react.png" alt="React" class="game-img" />
-          <p>React es una librería de JavaScript para construir interfaces SPA.</p>
-          <h3>React</h3>
-        </article>
-
-        <article class="card">
-          <img src="img/nodejs.jpg" alt="Node.js" class="game-img" />
-          <p>Node.js permite usar JavaScript en el servidor para crear APIs.</p>
-          <h3>Node.js</h3>
+          <p>Automatización, lógica y proyectos con IA.</p>
         </article>
 
         <article class="card">
           <img src="img/github.jpg" alt="GitHub" class="game-img" />
-          <h3>GitHub</h3>
+          <h3>Git & GitHub</h3>
+          <p>Control de versiones y trabajo colaborativo.</p>
         </article>
 
         <article class="card">
-          <img src="img/php.jpg" alt="PHP" class="game-img" />
-          <h3>PHP</h3>
+           <div style="font-size: 3rem; text-align: center;">🤖</div>
+          <h3>APIs & IA</h3>
+          <p>Integración de servicios externos e inteligencia artificial.</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- ===== PROYECTOS ===== -->
+    <section id="projects" class="projects container">
+      <h2>Proyectos Destacados</h2>
+      <div class="grid">
+        <article class="card">
+           <div style="font-size: 3rem; text-align: center;">🎵</div>
+          <h3>Reproductor de Música</h3>
+          <p>Aplicación móvil para reproducir música local con controles básicos.</p>
+          <p><strong>Tecnologías:</strong> React Native, JavaScript</p>
+          <a href="#">🔗 Ver Repositorio</a>
+        </article>
+
+        <article class="card">
+           <div style="font-size: 3rem; text-align: center;">🖼️</div>
+          <h3>Generador de Imágenes con IA</h3>
+          <p>Genera imágenes a partir de texto usando una API de IA.</p>
+           <p><strong>Tecnologías:</strong> React, APIs de IA, JavaScript</p>
+          <a href="#">🔗 Ver Repositorio</a>
+        </article>
+
+        <article class="card">
+           <div style="font-size: 3rem; text-align: center;">📊</div>
+          <h3>App CRUD con Autenticación</h3>
+          <p>Aplicación con login, registro y gestión de datos.</p>
+           <p><strong>Tecnologías:</strong> React / Firebase</p>
+          <a href="#">🔗 Ver Repositorio</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- ===== EXPERIENCIA ===== -->
+    <section id="experience" class="about container">
+      <h2>Experiencia</h2>
+      <div style="background-color: #222; padding: 1.5rem; border-radius: 10px; margin-top: 1rem;">
+        <h3>Practicante en Desarrollo de Software</h3>
+        <p>Participación en el desarrollo y mejora de aplicaciones, aprendizaje de buenas prácticas y trabajo en equipo.</p>
+      </div>
+    </section>
+
+    <!-- ===== METODOLOGÍA ===== -->
+    <section id="methodology" class="projects container">
+      <h2>Metodología de Trabajo</h2>
+      <div class="grid">
+         <article class="card">
+          <h3>🔄 Iterativo</h3>
+          <p>Desarrollo iterativo y orientado a resultados.</p>
+        </article>
+         <article class="card">
+          <h3>🤖 Apoyo con IA</h3>
+          <p>Uso de IA para acelerar el desarrollo.</p>
+        </article>
+         <article class="card">
+          <h3>📦 Funcional</h3>
+          <p>Enfoque en producto funcional.</p>
+        </article>
+         <article class="card">
+          <h3>✅ Calidad</h3>
+          <p>Código entendible, probado y mantenible.</p>
         </article>
       </div>
     </section>
@@ -170,6 +241,11 @@
     <section id="contact" class="contact container">
       <h2>Contacto</h2>
       <p>¿Quieres que construya algo para ti? Escríbeme:</p>
+      <ul style="list-style: none; padding: 0; text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">
+        <li>📧 Email: <a href="mailto:tu-email@example.com" style="color: var(--primary);">tu-email@example.com</a></li>
+        <li>🐙 GitHub: <a href="https://github.com/cjrsantos" target="_blank" style="color: var(--primary);">github.com/cjrsantos</a></li>
+        <li>🌐 Portafolio: <a href="https://cjrsantos.github.io/Mi-Portafolio/" target="_blank" style="color: var(--primary);">cjrsantos.github.io/Mi-Portafolio</a></li>
+      </ul>
       <form id="contact-form" onsubmit="handleContact(event)">
         <input type="text" name="name" placeholder="Tu nombre" required />
         <input type="email" name="email" placeholder="Tu correo" required />
