fix: Portfolio update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#skills">Habilidades</a></li>
         <li><a href="#projects">Proyectos</a></li>
         <li><a href="#experience">Experiencia</a></li>
-        <li><a href="#methodology">Metodología</a></li>
+        <li><a href="#education">Educación</a></li>
         <li><a href="#contact">Contacto</a></li>
       </ul>
     </nav>
@@ -32,8 +32,13 @@
     <!-- ===== HERO ===== -->
     <section id="home" class="hero container">
       <div class="hero-text">
-        <h1>Desarrollador de Software | <span>Mobile & Web | IA aplicada</span></h1>
-        <p>Estudiante de Ingeniería de Software — Creando soluciones prácticas con código e IA.</p>
+        <h1>Desarrollador Mobile & Frontend | <span>React Native + AI Workflow</span></h1>
+        <p>Estudiante de Ingeniería de Software | Creando soluciones ágiles y modernas para el mundo real.</p>
+        <div style="display: flex; gap: 1rem;">
+          <a href="#projects" class="btn">Ver Proyectos</a>
+          <a href="#contact" class="btn"
+            style="background: transparent; border: 1px solid var(--accent); color: var(--text);">Contáctame</a>
+        </div>
       </div>
       <div class="hero-image">
         <img src="img/yo_fotodeperfil.jpg" alt="Foto de CJ" class="avatar" id="profile-pic" style="cursor:pointer;" />
@@ -50,11 +55,18 @@
     <!-- ===== SOBRE MÍ ===== -->
     <section id="about" class="about container">
       <h2>Sobre mí</h2>
-      <p>Soy desarrollador de software con nivel intermedio, enfocado en crear aplicaciones funcionales y soluciones prácticas.</p>
+      <p>Soy desarrollador Frontend y Mobile con experiencia en proyectos reales. Actualmente colaboro con el
+        <strong>IIAP</strong> (Instituto de Investigaciones de la Amazonía Peruana) creando soluciones tecnológicas de
+        impacto.
+      </p>
       <br>
-      <p>Actualmente estudio Ingeniería de Software con enfoque en Inteligencia Artificial y realizo prácticas profesionales, donde refuerzo mis habilidades técnicas y trabajo en equipo.</p>
+      <p>Mi enfoque combina una sólida base en <strong>Ingeniería de Software</strong> con una metodología de
+        <strong>Desarrollo Acelerado por IA</strong>. Esto me permite prototipar, desarrollar y optimizar aplicaciones
+        en tiempo récord sin sacrificar calidad.
+      </p>
       <br>
-      <p>Me caracterizo por un desarrollo iterativo y eficiente, utilizando herramientas modernas y asistentes de IA como apoyo, manteniendo siempre el control y entendimiento del código. Me enfoco en entregar productos reales, optimizados y escalables.</p>
+      <p>💻 <strong>Stack Principal:</strong> React Native, Expo Go, React.js.<br>
+        🎵 <strong>Modo de Códice:</strong> Codeo mejor escuchando Phonk y Funk.</p>
     </section>
 
     <!-- ===== HABILIDADES ===== -->
@@ -74,7 +86,7 @@
           <p>Aplicaciones web y móviles multiplataforma.</p>
         </article>
 
-         <article class="card">
+        <article class="card">
           <!-- Placeholder or generic icon if specific img missing -->
           <div style="font-size: 3rem; text-align: center;">📱</div>
           <h3>Expo Go</h3>
@@ -88,7 +100,7 @@
         </article>
 
         <article class="card">
-           <div style="font-size: 3rem; text-align: center;">🔥</div>
+          <div style="font-size: 3rem; text-align: center;">🔥</div>
           <h3>Firebase</h3>
           <p>Autenticación, base de datos y backend para apps.</p>
         </article>
@@ -106,7 +118,7 @@
         </article>
 
         <article class="card">
-           <div style="font-size: 3rem; text-align: center;">🤖</div>
+          <div style="font-size: 3rem; text-align: center;">🤖</div>
           <h3>APIs & IA</h3>
           <p>Integración de servicios externos e inteligencia artificial.</p>
         </article>
@@ -115,29 +127,48 @@
 
     <!-- ===== PROYECTOS ===== -->
     <section id="projects" class="projects container">
-      <h2>Proyectos Destacados</h2>
+      <h2>Proyectos y Experiencia Real</h2>
       <div class="grid">
-        <article class="card">
-           <div style="font-size: 3rem; text-align: center;">🎵</div>
-          <h3>Reproductor de Música</h3>
-          <p>Aplicación móvil para reproducir música local con controles básicos.</p>
-          <p><strong>Tecnologías:</strong> React Native, JavaScript</p>
-          <a href="#">🔗 Ver Repositorio</a>
+        <!-- Project 1: IIAP Voluntariados -->
+        <article class="card" style="border-left: 4px solid #7dfcc2;">
+          <div style="font-size: 3rem; text-align: center;">🤝</div>
+          <h3>App de Voluntariados (IIAP)</h3>
+          <p>Aplicación móvil para gestionar programas de voluntariado en la Amazonía.</p>
+          <ul style="color: var(--muted); padding-left: 1rem; margin: 0.5rem 0;">
+            <li>Desarrollo con <strong>React Native + Expo Go</strong>.</li>
+            <li>Experiencia UX/UI moderna y accesibilidad.</li>
+          </ul>
         </article>
 
-        <article class="card">
-           <div style="font-size: 3rem; text-align: center;">🖼️</div>
-          <h3>Generador de Imágenes con IA</h3>
-          <p>Genera imágenes a partir de texto usando una API de IA.</p>
-           <p><strong>Tecnologías:</strong> React, APIs de IA, JavaScript</p>
-          <a href="#">🔗 Ver Repositorio</a>
+        <!-- Project 2: Citas IIAP -->
+        <article class="card" style="border-left: 4px solid #7dfcc2;">
+          <div style="font-size: 3rem; text-align: center;">📅</div>
+          <h3>Gestión de Citas (IIAP)</h3>
+          <p>Sistema móvil para la reserva y administración de citas institucionales.</p>
+          <p><strong>Estado:</strong> En desarrollo (Próximo lanzamiento).</p>
         </article>
 
+        <!-- Project 3: AI Image Generator -->
         <article class="card">
-           <div style="font-size: 3rem; text-align: center;">📊</div>
-          <h3>App CRUD con Autenticación</h3>
-          <p>Aplicación con login, registro y gestión de datos.</p>
-           <p><strong>Tecnologías:</strong> React / Firebase</p>
+          <div style="font-size: 3rem; text-align: center;">🎨</div>
+          <h3>Generador de Imágenes IA</h3>
+          <p>App innovadora que transforma texto a imágenes utilizando APIs avanzadas.</p>
+          <p><strong>Stack:</strong> React Native + Expo + IA APIs.</p>
+        </article>
+
+        <!-- Project 4: Music Player -->
+        <article class="card">
+          <div style="font-size: 3rem; text-align: center;">🎧</div>
+          <h3>Music Player Phonk/Funk</h3>
+          <p>Reproductor de música local moderno, diseñado para entusiastas del ritmo.</p>
+          <p><strong>Stack:</strong> React Native (En planificación).</p>
+        </article>
+
+        <!-- Project 5: Calculator -->
+        <article class="card">
+          <div style="font-size: 3rem; text-align: center;">🧮</div>
+          <h3>Calculadora Mobile</h3>
+          <p>Herramienta funcional y estética desarrollada desde cero.</p>
           <a href="#">🔗 Ver Repositorio</a>
         </article>
       </div>
@@ -148,91 +179,72 @@
       <h2>Experiencia</h2>
       <div style="background-color: #222; padding: 1.5rem; border-radius: 10px; margin-top: 1rem;">
         <h3>Practicante en Desarrollo de Software</h3>
-        <p>Participación en el desarrollo y mejora de aplicaciones, aprendizaje de buenas prácticas y trabajo en equipo.</p>
+        <p>Participación en el desarrollo y mejora de aplicaciones, aprendizaje de buenas prácticas y trabajo en equipo.
+        </p>
       </div>
     </section>
 
     <!-- ===== METODOLOGÍA ===== -->
     <section id="methodology" class="projects container">
-      <h2>Metodología de Trabajo</h2>
+      <h2>Metodología: "AI-Accelerated Dev"</h2>
+      <p style="color: var(--muted); margin-bottom: 2rem;">Utilizo la Inteligencia Artificial no para reemplazar, sino
+        para <strong>potenciar</strong> la velocidad y calidad del desarrollo.</p>
       <div class="grid">
-         <article class="card">
-          <h3>🔄 Iterativo</h3>
-          <p>Desarrollo iterativo y orientado a resultados.</p>
+        <article class="card">
+          <h3>⚡ Velocidad 2x</h3>
+          <p>Generación de boilerplate y refactorización rápida.</p>
         </article>
-         <article class="card">
-          <h3>🤖 Apoyo con IA</h3>
-          <p>Uso de IA para acelerar el desarrollo.</p>
+        <article class="card">
+          <h3>🧠 Código Inteligente</h3>
+          <p>Soluciones optimizadas y patrones de diseño modernos.</p>
         </article>
-         <article class="card">
-          <h3>📦 Funcional</h3>
-          <p>Enfoque en producto funcional.</p>
+        <article class="card">
+          <h3>📱 Mobile First</h3>
+          <p>Enfoque prioritario en la experiencia de usuario móvil.</p>
         </article>
-         <article class="card">
-          <h3>✅ Calidad</h3>
-          <p>Código entendible, probado y mantenible.</p>
+        <article class="card">
+          <h3>🎯 Resultados Reales</h3>
+          <p>Entrega de MVPs funcionales en tiempos cortos.</p>
         </article>
       </div>
     </section>
 
 
-    <!-- ===== PASATIEMPOS ===== -->
-    <section id="pasatiempos" class="projects container">
-      <h2>Pasatiempos</h2>
-      <div class="grid">
-        <article class="card">
-          <img src="img/pasear.jpg" alt="Salir a pasear" class="game-img" />
-          <h3>Salir a pasear</h3>
-          <p>Solo o con amigos a plazas o restaurantes.</p>
-        </article>
-
-        <article class="card">
-          <img src="img/jugarvideojuegos.jpg" alt="Jugar Videojuegos" class="game-img" />
-          <h3>Jugar Videojuegos</h3>
-          <p>Me gustan juegos de estrategia, RPG, FPS, MOBA, etc.</p>
-        </article>
-
-        <article class="card">
-          <img src="img/escucharmusica.jpg" alt="Escuchar música" class="game-img" />
-          <h3>Escuchar música</h3>
-          <p>Escucho desde música clásica hasta los éxitos modernos.</p>
-        </article>
-
-        <article class="card">
-          <img src="img/hacerejercicio.jpg" alt="Hacer ejercicio" class="game-img" />
-          <h3>Hacer Ejercicio</h3>
-          <p>Entreno en casa, parque, playa y a veces en el gimnasio.</p>
+    <!-- ===== EDUCACIÓN ===== -->
+    <section id="education" class="projects container">
+      <h2>Educación</h2>
+      <div class="grid" style="grid-template-columns: 1fr;">
+        <article class="card" style="border-left: 4px solid #7dfcc2; display: flex; align-items: center; gap: 1rem;">
+          <div style="font-size: 3rem;">🎓</div>
+          <div>
+            <h3>Ingeniería de Software con IA</h3>
+            <p><strong>SENATI</strong> | En curso</p>
+            <p style="margin-top: 0.5rem; color: var(--muted);">Formación especializada en desarrollo de software,
+              algoritmos de inteligencia artificial y soluciones tecnológicas avanzadas.</p>
+          </div>
         </article>
       </div>
     </section>
 
-
-    <!-- ===== JUEGOS FAVORITOS ===== -->
-    <section id="juegos-favoritos" class="projects container">
-      <h2>Juegos Favoritos</h2>
+    <!-- ===== HABILIDADES BLANDAS ===== -->
+    <section id="soft-skills" class="skills-section container" style="padding: 2rem;">
+      <h2>Habilidades Blandas</h2>
       <div class="grid">
         <article class="card">
-          <img src="img/call_of_dutty_blackops.jpg" alt="Call of Duty" class="game-img" />
-          <h3>Call of Duty</h3>
-          <p>Saga de disparos en primera persona reconocida mundialmente.</p>
+          <h3>🧠 Resolución de Problemas</h3>
+          <p>Capacidad para analizar desafíos complejos y encontrar soluciones eficientes.</p>
         </article>
-
         <article class="card">
-          <img src="img/freefire_portada.jpg" alt="Free Fire" class="game-img" />
-          <h3>Free Fire</h3>
-          <p>Juego de supervivencia para móviles con 50 jugadores.</p>
+          <h3>🤝 Trabajo en Equipo</h3>
+          <p>Colaboración efectiva en entornos ágiles y multidisciplinarios.</p>
         </article>
-
         <article class="card">
-          <img src="img/mortalkombat.jpg" alt="Mortal Kombat" class="game-img" />
-          <h3>Mortal Kombat</h3>
-          <p>Juego de lucha famoso por sus fatalities y combates intensos.</p>
+          <h3>💬 Comunicación Efectiva</h3>
+          <p>Transmisión clara de ideas técnicas y funcionales.</p>
         </article>
-
         <article class="card">
-          <img src="img/counterstrike.jpg" alt="Counter Strike" class="game-img" />
-          <h3>Counter Strike</h3>
-          <p>Shooter táctico multijugador que revolucionó los FPS.</p>
+          <h3>🚀 Adaptabilidad</h3>
+          <p>Aprendizaje continuo y adaptación a nuevas tecnologías (como IA).</p>
         </article>
       </div>
     </section>
@@ -243,8 +255,10 @@
       <p>¿Quieres que construya algo para ti? Escríbeme:</p>
       <ul style="list-style: none; padding: 0; text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">
         <li>📧 Email: <a href="mailto:tu-email@example.com" style="color: var(--primary);">tu-email@example.com</a></li>
-        <li>🐙 GitHub: <a href="https://github.com/cjrsantos" target="_blank" style="color: var(--primary);">github.com/cjrsantos</a></li>
-        <li>🌐 Portafolio: <a href="https://cjrsantos.github.io/Mi-Portafolio/" target="_blank" style="color: var(--primary);">cjrsantos.github.io/Mi-Portafolio</a></li>
+        <li>🐙 GitHub: <a href="https://github.com/cjrsantos" target="_blank"
+            style="color: var(--primary);">github.com/cjrsantos</a></li>
+        <li>🌐 Portafolio: <a href="https://cjrsantos.github.io/Mi-Portafolio/" target="_blank"
+            style="color: var(--primary);">cjrsantos.github.io/Mi-Portafolio</a></li>
       </ul>
       <form id="contact-form" onsubmit="handleContact(event)">
         <input type="text" name="name" placeholder="Tu nombre" required />
