improvement of my portfolio

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <!-- ===== HERO ===== -->
     <section id="home" class="hero container">
       <div class="hero-text">
-        <h1>Desarrollador Mobile & Frontend | <span>React Native + AI Workflow</span></h1>
-        <p>Estudiante de Ingeniería de Software | Creando soluciones ágiles y modernas para el mundo real.</p>
+        <h1>Desarrollador Web Práctico y Soluciones Digitales</h1>
+        <p class="hero-subtitle">HTML, CSS, JavaScript y experiencias con herramientas asistidas por IA</p>
         <div style="display: flex; gap: 1rem;">
           <a href="#projects" class="btn">Ver Proyectos</a>
           <a href="#contact" class="btn"
-            style="background: transparent; border: 1px solid var(--accent); color: var(--text);">Contáctame</a>
+            style="background: transparent; border: 1px solid var(--accent); color: var(--text-main);">Contáctame</a>
         </div>
       </div>
       <div class="hero-image">
@@ -55,72 +55,61 @@
     <!-- ===== SOBRE MÍ ===== -->
     <section id="about" class="about container">
       <h2>Sobre mí</h2>
-      <p>Soy desarrollador Frontend y Mobile con experiencia en proyectos reales. Actualmente colaboro con el
-        <strong>IIAP</strong> (Instituto de Investigaciones de la Amazonía Peruana) creando soluciones tecnológicas de
-        impacto.
-      </p>
+      <p>Soy desarrollador web práctico, enfocado en crear soluciones simples y funcionales usando HTML, CSS y
+        JavaScript.</p>
       <br>
-      <p>Mi enfoque combina una sólida base en <strong>Ingeniería de Software</strong> con una metodología de
-        <strong>Desarrollo Acelerado por IA</strong>. Esto me permite prototipar, desarrollar y optimizar aplicaciones
-        en tiempo récord sin sacrificar calidad.
-      </p>
-      <br>
-      <p>💻 <strong>Stack Principal:</strong> React Native, Expo Go, React.js.<br>
-        🎵 <strong>Modo de Códice:</strong> Codeo mejor escuchando Phonk y Funk.</p>
+      <p>Me gusta resolver problemas reales y apoyar mis proyectos con herramientas modernas como IA para agilizar
+        resultados.</p>
     </section>
 
     <!-- ===== HABILIDADES ===== -->
     <!-- ===== HABILIDADES ===== -->
     <section id="skills" class="projects container">
       <h2>Habilidades Técnicas</h2>
+      <h3>⭐ Habilidades principales</h3>
       <div class="grid">
-        <article class="card">
-          <img src="img/javascript.jpg" alt="JavaScript" class="game-img" />
-          <h3>JavaScript / TypeScript</h3>
-          <p>Desarrollo de lógica y aplicaciones interactivas.</p>
-        </article>
-
-        <article class="card">
-          <img src="img/react.png" alt="React" class="game-img" />
-          <h3>React / React Native</h3>
-          <p>Aplicaciones web y móviles multiplataforma.</p>
-        </article>
-
-        <article class="card">
-          <!-- Placeholder or generic icon if specific img missing -->
-          <div style="font-size: 3rem; text-align: center;">📱</div>
-          <h3>Expo Go</h3>
-          <p>Desarrollo y prototipado rápido de aplicaciones móviles.</p>
-        </article>
-
         <article class="card">
           <img src="img/html5.jpg" alt="HTML5" class="game-img" />
           <h3>HTML & CSS</h3>
-          <p>Interfaces limpias y responsivas.</p>
+          <p>Diseño de páginas web simples y responsive.</p>
         </article>
-
         <article class="card">
-          <div style="font-size: 3rem; text-align: center;">🔥</div>
-          <h3>Firebase</h3>
-          <p>Autenticación, base de datos y backend para apps.</p>
+          <img src="img/javascript.jpg" alt="JavaScript" class="game-img" />
+          <h3>JavaScript</h3>
+          <p>Lógica y funcionalidades interactivas.</p>
         </article>
+      </div>
 
+      <h3 style="margin-top: 3rem;">🧪 En aprendizaje / experiencia básica</h3>
+      <div class="grid">
         <article class="card">
-          <img src="img/python.jpg" alt="Python" class="game-img" />
-          <h3>Python</h3>
-          <p>Automatización, lógica y proyectos con IA.</p>
+          <img src="img/react.png" alt="React" class="game-img" />
+          <h3>React</h3>
+          <p>Biblioteca para interfaces de usuario.</p>
         </article>
-
         <article class="card">
-          <img src="img/github.jpg" alt="GitHub" class="game-img" />
-          <h3>Git & GitHub</h3>
-          <p>Control de versiones y trabajo colaborativo.</p>
+          <div style="font-size: 3rem; text-align: center;">📱</div>
+          <h3>React Native / Expo</h3>
+          <p>Desarrollo de Apps Móviles.</p>
         </article>
-
         <article class="card">
           <div style="font-size: 3rem; text-align: center;">🤖</div>
-          <h3>APIs & IA</h3>
-          <p>Integración de servicios externos e inteligencia artificial.</p>
+          <h3>Integración con APIs e IA</h3>
+          <p>Consumo de datos y herramientas inteligentes.</p>
+        </article>
+      </div>
+
+      <h3 style="margin-top: 3rem;">🧰 Otras herramientas</h3>
+      <div class="grid">
+        <article class="card">
+          <img src="img/github.jpg" alt="Git y GitHub" class="game-img" />
+          <h3>Git & GitHub</h3>
+          <p>Control de versiones.</p>
+        </article>
+        <article class="card">
+          <div style="font-size: 3rem; text-align: center;">🔥</div>
+          <h3>Firebase (Básico)</h3>
+          <p>Base de datos en tiempo real.</p>
         </article>
       </div>
     </section>
@@ -129,47 +118,86 @@
     <section id="projects" class="projects container">
       <h2>Proyectos y Experiencia Real</h2>
       <div class="grid">
-        <!-- Project 1: IIAP Voluntariados -->
-        <article class="card" style="border-left: 4px solid #7dfcc2;">
-          <div style="font-size: 3rem; text-align: center;">🤝</div>
-          <h3>App de Voluntariados (IIAP)</h3>
-          <p>Aplicación móvil para gestionar programas de voluntariado en la Amazonía.</p>
-          <ul style="color: var(--muted); padding-left: 1rem; margin: 0.5rem 0;">
-            <li>Desarrollo con <strong>React Native + Expo Go</strong>.</li>
-            <li>Experiencia UX/UI moderna y accesibilidad.</li>
-          </ul>
-        </article>
-
-        <!-- Project 2: Citas IIAP -->
-        <article class="card" style="border-left: 4px solid #7dfcc2;">
-          <div style="font-size: 3rem; text-align: center;">📅</div>
-          <h3>Gestión de Citas (IIAP)</h3>
-          <p>Sistema móvil para la reserva y administración de citas institucionales.</p>
-          <p><strong>Estado:</strong> En desarrollo (Próximo lanzamiento).</p>
-        </article>
-
-        <!-- Project 3: AI Image Generator -->
+        <!-- Project 1: Mi Portafolio -->
         <article class="card">
-          <div style="font-size: 3rem; text-align: center;">🎨</div>
-          <h3>Generador de Imágenes IA</h3>
-          <p>App innovadora que transforma texto a imágenes utilizando APIs avanzadas.</p>
-          <p><strong>Stack:</strong> React Native + Expo + IA APIs.</p>
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">📂</div>
+          <h3>Mi Portafolio</h3>
+          <p>Sitio web personal para mostrar mis proyectos y habilidades.</p>
+          <p><strong>Estado:</strong> Terminado</p>
+          <a href="https://cjrsantos.github.io/Mi-Portafolio/" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
         </article>
 
-        <!-- Project 4: Music Player -->
+        <!-- Project 2: Calculator -->
         <article class="card">
-          <div style="font-size: 3rem; text-align: center;">🎧</div>
-          <h3>Music Player Phonk/Funk</h3>
-          <p>Reproductor de música local moderno, diseñado para entusiastas del ritmo.</p>
-          <p><strong>Stack:</strong> React Native (En planificación).</p>
-        </article>
-
-        <!-- Project 5: Calculator -->
-        <article class="card">
+          <!-- TODO: Add Screenshot -->
           <div style="font-size: 3rem; text-align: center;">🧮</div>
-          <h3>Calculadora Mobile</h3>
-          <p>Herramienta funcional y estética desarrollada desde cero.</p>
-          <a href="#">🔗 Ver Repositorio</a>
+          <h3>Calculator</h3>
+          <p>Calculadora móvil funcional desarrollada con React Native y Expo.</p>
+          <p><strong>Stack:</strong> React Native, Expo Go</p>
+          <p><strong>Estado:</strong> Terminado</p>
+          <a href="https://github.com/CJRSantos/Calculator.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
+        </article>
+
+        <!-- Project 3: Consumir API de Youtube -->
+        <article class="card">
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">📺</div>
+          <h3>Consumir API de Youtube</h3>
+          <p>App que busca y reproduce videos usando la API de datos de YouTube.</p>
+          <p><strong>Stack:</strong> React Native, Expo Go</p>
+          <p><strong>Estado:</strong> Terminado (Necesita mejoras)</p>
+          <a href="https://github.com/CJRSantos/Consumir-API-de-Youtube.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
+        </article>
+
+        <!-- Project 4: POKEAPI -->
+        <article class="card">
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">🐉</div>
+          <h3>POKEAPI</h3>
+          <p>Pokedex simple que consume la PokeAPI para mostrar información de pokemones.</p>
+          <p><strong>Estado:</strong> Terminado (Necesita mejoras)</p>
+          <a href="https://github.com/CJRSantos/POKEAPI.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
+        </article>
+
+        <!-- Project 5: VoluntariadosAPP -->
+        <article class="card">
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">🤝</div>
+          <h3>VoluntariadosAPP (Mobile)</h3>
+          <p>Aplicación para gestión de voluntariados.</p>
+          <p><strong>Stack:</strong> React Native, Expo Go</p>
+          <p><strong>Estado:</strong> Terminado (Necesita mejoras)</p>
+          <a href="https://github.com/jmartinez888/volunteer-system-mobile-react-native.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
+        </article>
+
+        <!-- Project 6: AI Image Generated -->
+        <article class="card">
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">🎨</div>
+          <h3>AI Image Generated</h3>
+          <p>Generador de imágenes basado en texto usando APIs de IA.</p>
+          <p><strong>Stack:</strong> React Native, Expo Go</p>
+          <p><strong>Estado:</strong> Falta por terminar</p>
+          <a href="https://github.com/CJRSantos/AI-Image-Generated.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
+        </article>
+
+        <!-- Project 7: Voluntariados IIAP Web -->
+        <article class="card">
+          <!-- TODO: Add Screenshot -->
+          <div style="font-size: 3rem; text-align: center;">🌐</div>
+          <h3>Web Voluntariados IIAP</h3>
+          <p>Colaboración en el frontend de la plataforma de voluntariados del IIAP.</p>
+          <p><strong>Stack:</strong> React.js</p>
+          <p><strong>Rol:</strong> Colaborador</p>
+          <a href="https://github.com/jmartinez888/volunteer-system-app.git" target="_blank" class="btn"
+            style="margin-top: 1rem; font-size: 0.8rem;">Ver Repositorio</a>
         </article>
       </div>
     </section>
@@ -252,7 +280,8 @@
     <!-- ===== CONTACTO ===== -->
     <section id="contact" class="contact container">
       <h2>Contacto</h2>
-      <p>¿Quieres que construya algo para ti? Escríbeme:</p>
+      <p>Estoy disponible para proyectos web simples y soluciones digitales.</p>
+      <p>Escríbeme a: <a href="mailto:tu-email@example.com" style="color: var(--accent);">tu-email@example.com</a></p>
       <ul style="list-style: none; padding: 0; text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">
         <li>📧 Email: <a href="mailto:tu-email@example.com" style="color: var(--primary);">tu-email@example.com</a></li>
         <li>🐙 GitHub: <a href="https://github.com/cjrsantos" target="_blank"
